--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="sidebar">
         <nav>
             <ul>
-                <li><a href="#biography">1315Biography</a></li>
+                <li><a href="#biography">1330Biography</a></li>
                 <li><a href="#skills">Skills and Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -170,7 +170,7 @@
         <a href="https://jlopeztmu.github.io">https://jlopeztmu.github.io</a>
 
         <h3>SUMMARY OF QUALIFICATIONS</h3>
-        <p>Computer Science Professional with over fifteen years of Canadian experience and Data Science education (graduate level).</p>
+        <p>Computer Science Professional with over 15 years of Canadian experience and Data Science education (graduate level).</p>
         <p>Knowledge of statistics, probability theory, computational methods, predictive analysis, and data visualizations.</p>
         <p>Experienced in diverse industries (retail, technology, consulting, financial, and mining) and government.</p>
         <p>Data Science knowledge and practice including data analysis, data manipulation, data visualization, and data modeling. Also, Machine Learning: Supervised and Unsupervised Algorithms (including regression and NLP for instance), Deep Learning (Neural Networks), and more.</p>
@@ -276,11 +276,15 @@
         <h2 align="center">PORTFOLIO</h2>
         <h2>Projects</h2>
         <p><strong>Prompta Alpha-1 Project.</strong></p>
-		<p>A NLP and Sentiment Analysis application that analyses large text corpuses, initially represented by open ended responses to a survey applied to a group of persons.</p>
-		<p>The Topic Model Latent Dirichlet Allocation (LDA) was applied to the text corpus and a number of topics were outputted with their corresponding&nbsp; Sentiment Analysis.</p>
-		<p>This application served as a listening tool for the business that applied&nbsp; its results to suggest a change management for their customers.</p>
-		<p><strong>Should you would like to see a more detailed description of the application, please request it.</strong></p>
-        <!-- Other project content -->
+	<u1>
+		<li>Implemented IT infrastructure (SW). Organized Project team. Architected solution E2E, including database design and creation of a Natural Language/Sentiment Analysis (NLP/SA) application that implemented the LDA algorithm. Developed back-end using Python, PostgreSQL, and GCP.</li>
+		<li>Implemented Machine Learning solution for TOPSIS and Employee Attrition models using Python, PostgreSQL, and Google Cloud Platform (GCP).</li>
+
+	</u1>
+
+	<p><strong>Should you would like to see a more detailed description of the application, please request it.</strong></p>
+        
+	<!-- Other project content -->
         <p><strong>Mentorship Project at Sharpestminds.</strong></p>
 		<p>Decision makers take decisions commonly based on data that is collected from various sources. By having a unique source of data (a database) for performing analysis, it is possible to speed up greatly the process of extracting insight by data scientist to assist the decision making.</p>
 		<p>I built a structured repository of data from unstructured data, scraped from two websites and placed it in a PostgreSQL database, allowing data scientist to perform inferences over this readily available data.</p>
@@ -300,15 +304,15 @@
 	</u1>
         <h3><strong>Towards Data Science</strong></h3>
 	<u1>
-	        <li href="https://towardsdatascience.com/how-twitter-and-machine-learning-kde-lda-help-to-predict-crime-5b8abbd15596"target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)</li> 
-        	<li href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">Buyers beware: fake product reviews are plaguing the internet. How Machine Learning can help to spot them (2019)"</li>
-        	<li href="https://medium.com/@jlopez_31188/using-chatgpt-4-for-coding-tips-and-tricks-5c66fb0013af" target="_blank">Using ChatGPT-4 for Coding, Tips and Tricks (2023)"</li>	
+	        <a href="https://towardsdatascience.com/how-twitter-and-machine-learning-kde-lda-help-to-predict-crime-5b8abbd15596"target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)</p> 
+        	<a href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">Buyers beware: fake product reviews are plaguing the internet. How Machine Learning can help to spot them (2019)"</p>
+        	<a href="https://medium.com/@jlopez_31188/using-chatgpt-4-for-coding-tips-and-tricks-5c66fb0013af" target="_blank">Using ChatGPT-4 for Coding, Tips and Tricks (2023)"</p>	
 	</u1>
 
         <h3><strong>Talks at AISC (Artificial Intelligence Socratic Circles</strong></h3>
 	<u1>    
-        <li href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)" </li> 
-        <li href="https://www.loom.com/share/eff2be4a3918409e804975d6405a79c7" target="_blank">Focal Loss for Dense Object Detection (2018)"</li>                                                                                                                   
+        <a href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)" </li> 
+        <a href="https://www.loom.com/share/eff2be4a3918409e804975d6405a79c7" target="_blank">Focal Loss for Dense Object Detection (2018)"</li>                                                                                                                   
         </u1>
     </div>
     <div class="content" id="awards">
