--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div id="sidebar">
         <nav>
             <ul>
-                <li><a href="#biography">1337Biography</a></li>
+                <li><a href="#biography">1340Biography</a></li>
                 <li><a href="#skills">Skills and Experience</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -141,25 +141,31 @@
         <h2 align="center">PORTFOLIO</h2>
         <h3>SKILLS AND EXPERIENCE</h3>
         <h3>Hard Skills</h3>
-        <p>- Working with large amounts of data.</p>
-        <p>- Converting unstructured data to structured data.</p>
-        <p>- Preparing data for analysis (includes manipulation and cleansing).</p>
-        <p>- Gaining insights from data to assist decision-making (including the use of ML algorithms).</p>
-        <p>- Natural Language Processing, particularly probabilistic topic models, applying the LDA algorithm to unstructured text corpora.</p>
-        <p>- Creating and manipulating data in relational databases using SQL (Cloud SQL with PostgreSQL). Data modelers like ER/ONE. DB Management tools such as PGAdmin.</p>
-        <p>- Working with Linux OS (Ubuntu).</p>
-        <p>- Programming in Python and R languages (RStudio, Jupyter Notebook, Google Colab, PyCharm). Also, C, C++, and archaic languages.</p>
-        <p>Including:</p>
-        <p>- Exposure to NoSQL DBs (MongoDB), Hadoop, and Apache Spark.</p>
-        <p>- Development Tools: GitHub, SourceTree, Docker.</p>
-        <p>- Platforms: Google Cloud.</p>
-        <p>- Data Science frameworks and libraries: TensorFlow, scikit-learn, pandas, fastai.</p>
-        <p>- Project Management: Waterfall and Agile paradigms. Specialized in software quality assurance.</p>
+	    <u1>
+		<li>- Working with large amounts of data.</li>
+	        <li>- Converting unstructured data to structured data.</li>
+	        <li>- Preparing data for analysis (includes manipulation and cleansing).</li>
+	        <li>- Gaining insights from data to assist decision-making (including the use of ML algorithms).</li>
+	        <li>- Natural Language Processing, particularly probabilistic topic models, applying the LDA algorithm to unstructured text corpora.</li>
+	        <li>- Creating and manipulating data in relational databases using SQL (Cloud SQL with PostgreSQL). Data modelers like ER/ONE. DB Management tools such as PGAdmin.</li>
+	        <li>- Working with Linux OS (Ubuntu).</li>
+	        <li>- Programming in Python and R languages (RStudio, Jupyter Notebook, Google Colab, PyCharm). Also, C, C++, and archaic languages.</li>
+	        <li>Including:</li>
+	        <li>- Exposure to NoSQL DBs (MongoDB), Hadoop, and Apache Spark.</li>
+	        <li>- Development Tools: GitHub, SourceTree, Docker.</li>
+	        <li>- Platforms: Google Cloud.</li>
+	        <li>- Data Science frameworks and libraries: TensorFlow, scikit-learn, pandas, fastai.</li>
+	        <li>- Project Management: Waterfall and Agile paradigms. Specialized in software quality assurance.</li>    
+	   </u1>
+        
         
         <h3>Soft Skills</h3>
-        <p>- Contributing to resolving the problems that the organization faces and cooperating with solutions to move it forward.</p>
-        <p>- Teaming up with the right people to reach common objectives as a group.</p>
-        <p>- Willing to go the extra mile to achieve set goals.</p>
+	    <u1>
+		<li>- Contributing to resolving the problems that the organization faces and cooperating with solutions to move it forward.</li>
+        	<li>- Teaming up with the right people to reach common objectives as a group.</li>
+        	<li>- Willing to go the extra mile to achieve set goals.</li>    
+	    </u1>
+
     </div>
     <div class="content" id="resume">
         <h1 align="center">George Lopez</h1>
@@ -311,8 +317,8 @@
 
         <h3><strong>Talks at AISC (Artificial Intelligence Socratic Circles</strong></h3>
 	<u1>    
-        	<a href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)" </li> 
-        	<a href="https://www.loom.com/share/eff2be4a3918409e804975d6405a79c7" target="_blank">Focal Loss for Dense Object Detection (2018)"</li>                                                                                                                   
+        	<a href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)" </p> 
+        	<a href="https://www.loom.com/share/eff2be4a3918409e804975d6405a79c7" target="_blank">Focal Loss for Dense Object Detection (2018)"</p>                                                                                                                   
         </u1>
     </div>
     <div class="content" id="awards">
