--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <ul>
         	<li>ACCELERATING THE TRAINING OF ARTIFICIAL NEURAL NETWORKS USING DATA PARALLELIZATION AND CPU AFFINITY ON CPUs AND GPUs -2023, Presented at Mohawk College, Hamilton, ON Canada</li>
         	<li>SIMULATION OF PARALLELIZATION OF DEEP NEURAL NETWORKS BY DIVIDING DATA - 2024, Presented at American University, Washington, DC USA</li>
-		</li>SIMULATION OF DEEP NEURAL NETWORKS WITH DATA PARALLELIZATION -2025, Presented at Univesidad Complutense, Madrid, Spain</li>
+		<li>SIMULATION OF DEEP NEURAL NETWORKS WITH DATA PARALLELIZATION -2025, Presented at Univesidad Complutense, Madrid, Spain</li>
 		
 	</ul>
         <h3><strong>Towards Data Science</strong></h3>
