--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
         	<a href="https://medium.com/@jlopez_31188/using-chatgpt-4-for-coding-tips-and-tricks-5c66fb0013af" target="_blank">Using ChatGPT-4 for Coding, Tips and Tricks (2023)"</p>	
 	</ul>
 
-        <h3><strong>Talks at AISC (Artificial Intelligence Socratic Circles</strong></h3>
-	<ul>    
-        	<a href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)" </p> 
-        	<a href="https://www.loom.com/share/eff2be4a3918409e804975d6405a79c7" target="_blank">Focal Loss for Dense Object Detection (2018)"</p>                                                                                                                   
-        </ul>
+	<h3><strong>Talks at AISC (Artificial Intelligence Socratic Circles)</strong></h3>
+	<ul>
+	    <li><a href="https://www.youtube.com/watch?v=bW_-I2qYmEQ" target="_blank">Combining Satellite Imagery and ML to predict poverty (2018)</a></li>
+	    <li><a href="https://www.loom.com/share/eff2be4a3918409e804975d6405a79c7" target="_blank">Focal Loss for Dense Object Detection (2018)</a></li>
+	</ul>
     </div>
     <div class="content" id="awards">
         <h1 align="center">George Lopez</h1>
