--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
 		<li>SIMULATION OF DEEP NEURAL NETWORKS WITH DATA PARALLELIZATION -2025, Presented at Univesidad Complutense, Madrid, Spain</li>
 		
 	</ul>
-        <h3><strong>Towards Data Science</strong></h3>
+	<h3><strong>Towards Data Science</strong></h3>
 	<ul>
-	        <a href="https://towardsdatascience.com/how-twitter-and-machine-learning-kde-lda-help-to-predict-crime-5b8abbd15596"target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)</p> 
-        	<a href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">Buyers beware: fake product reviews are plaguing the internet. How Machine Learning can help to spot them (2019)"</p>
-        	<a href="https://medium.com/@jlopez_31188/using-chatgpt-4-for-coding-tips-and-tricks-5c66fb0013af" target="_blank">Using ChatGPT-4 for Coding, Tips and Tricks (2023)"</p>	
+	    <li><a href="https://towardsdatascience.com/how-twitter-and-machine-learning-kde-lda-help-to-predict-crime-5b8abbd15596" target="_blank">How Twitter and AI (KDE + LDA) help to predict Crime? (2019)</a></li>
+	    <li><a href="https://towardsdatascience.com/buyers-beware-fake-product-reviews-are-plaguing-the-internet-cfc599c42b6b" target="_blank">Buyers beware: fake product reviews are plaguing the internet (2019)</a></li>
+	    <li><a href="https://medium.com/@jlopez_31188/using-chatgpt-4-for-coding-tips-and-tricks-5c66fb0013af" target="_blank">Using ChatGPT-4 for Coding, Tips and Tricks (2023)</a></li>
 	</ul>
 
 	<h3><strong>Talks at AISC (Artificial Intelligence Socratic Circles)</strong></h3>
