--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
             height: 100%;
             overflow-y: auto;
         }
-        .content {
-            margin-left: 200px;
-            padding: 20px;
-            flex: 1;
-            background-color: #fff;
-        }
+	.content {
+	    margin-left: 200px;
+	    padding: 20px 20px 20px 16px; /* top right bottom left */
+	    flex: 1;
+	    background-color: #fff;
+	}
+
         #sidebar nav ul {
             list-style: none;
             margin: 0;
