--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
             overflow-y: auto;
         }
 	.content {
-	    margin-left: 200px;
-	    padding: 20px 20px 20px 16px; /* top right bottom left */
-	    flex: 1;
-	    background-color: #fff;
-	}
-
+	  margin-left: 180px; /* or even 160px if you want tighter layout */
+	  padding: 20px 20px 20px 12px; /* left padding = 12px adds subtle indentation */
+	  flex: 1;
+	  background-color: #fff;
+}
         #sidebar nav ul {
             list-style: none;
             margin: 0;
