--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             overflow-y: auto;
         }
 	.content {
-	  margin-left: 200px; /* or even 160px if you want tighter layout */
-	  padding: 20px 20px 20px 12px; /* left padding = 12px adds subtle indentation */
-	  flex: 1;
+	  margin-left: 220px; 
+	  padding: 20px 
+          flex: 1;
 	  background-color: #fff;
 }
         #sidebar nav ul {
