--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
             height: 100%;
             overflow-y: auto;
         }
-        .content {
-            margin-left: 200px;
-            padding: 20px 20px 20px 16px; /* top right bottom left */
-            flex: 1;
-            background-color: #fff;
+       .content {
+          margin-left: 220px;              /* accounts for the 200px sidebar + 20px visual buffer */
+          padding: 20px;                   /* uniform padding */
+          flex: 1;
+          background-color: #fff;
         }
-
         #sidebar nav ul {
             list-style: none;
             margin: 0;
