--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 border-right: 1px solid #ddd;
             }
             .content {
-                margin-left: 0;
+                margin-left: 40px;
                 padding-top: 60px; /* Adjust this value to match the height of the fixed header */
             }
         }
