--- a/index.html
+++ b/index.html
@@ -120,14 +120,11 @@
         <h1>George Lopez</h1>
         <h2>PORTFOLIO</h2>
         <h3>BIOGRAPHY</h3>
-        <p>As a Computer Science professional specializing in data science and machine learning, I have served as a Data Scientist in a management consulting firm and within the IT departments of global companies, including Scotiabank, Accenture, and PwC.</p>
-        <p>I completed the machine learning mentorship program at SharpestMinds.</p>
-        <p>I earned a Master of Science in Computer Science from Ryerson University, Canada, and a Bachelor of Applied Mathematics and Computer Science from the National Autonomous University of Mexico (UNAM).</p>
-        <p>I am currently pursuing a Ph.D. in Computer Science, focusing on Artificial Intelligence and Deep Learning, at Toronto Metropolitan University in Toronto, Canada.</p>
-        <p>I possess the skills and knowledge to address complex challenges in information technology and data science.</p>
-        <p>I am passionate about applying data science and continually learning emerging technologies.</p>
-        <p>I thrive in collaborative environments and embrace challenging projects.</p>
-        <p>I am an avid learner, consistently seeking to enhance my work through new technologies.</p>
+        <p>Senior Data Scientist specializing in applied machine learning and distributed training systems, with 15+ years across consulting, finance, and technology.</p>
+        <p>I design and deploy production-grade ML solutions, including data ingestion pipelines, model training and validation workflows, and containerized deployment and monitoring.</p>
+        <p>I am a PhD candidate in Computer Science (AI / Data Science) at Toronto Metropolitan University, focused on scalable training systems, distributed optimization, and rigorous model evaluation.</p>
+        <p>Previously, I delivered end-to-end NLP and sentiment analysis systems on Google Cloud at Prompta AI, and built predictive models and analytics solutions in consulting engagements.</p>
+        <p>I enjoy working at the intersection of ML engineering, evaluation methodology, and practical business outcomes.</p>
     </div>
 
     <div class="content" id="skills">
@@ -136,26 +133,20 @@
         <h3>SKILLS AND EXPERIENCE</h3>
         <h3>Hard Skills</h3>
         <ul>
-            <li>Proficient in handling large datasets.</li>
-            <li>Transforming unstructured data into structured formats.</li>
-            <li>Preparing data for analysis, including data manipulation and cleansing.</li>
-            <li>Extracting insights from data to support decision-making, utilizing machine learning algorithms.</li>
-            <li>Expertise in Natural Language Processing, particularly in applying probabilistic topic models like Latent Dirichlet Allocation (LDA) to unstructured text corpora.</li>
-            <li>Designing and managing relational databases using SQL (Cloud SQL with PostgreSQL), utilizing data modeling tools like ER/ONE and database management tools such as PGAdmin.</li>
-            <li>Proficient in Linux operating systems, particularly Ubuntu.</li>
-            <li>Programming in Python and R (using tools like RStudio, Jupyter Notebook, Google Colab, PyCharm), with additional experience in C, C++, and legacy programming languages.</li>
-            <li>Familiar with NoSQL databases (e.g., MongoDB), Hadoop, and Apache Spark.</li>
-            <li>Development tools: GitHub, SourceTree, Docker.</li>
-            <li>Platforms: Google Cloud Platform.</li>
-            <li>Data science frameworks and libraries: TensorFlow, scikit-learn, pandas, fastai.</li>
-            <li>Project management methodologies: Waterfall and Agile, with specialization in software quality assurance.</li>
+            <li>Machine Learning & AI: deep learning, model training, experiment design, model validation, bias/variance trade-offs.</li>
+            <li>Distributed & Scalable ML Systems: distributed training concepts, scalability and communication trade-off analysis, rigorous evaluation workflows.</li>
+            <li>Large Language Models & GenAI: conceptual grounding in transformers, prompt engineering, RAG concepts, and validation workflows.</li>
+            <li>Programming: Python (PyTorch, TensorFlow, scikit-learn, pandas), SQL; reproducible experimentation.</li>
+            <li>Data & Platforms: scalable data processing, Spark exposure; Google Cloud delivery experience.</li>
+            <li>MLOps & Delivery: data ingestion pipelines, containerized deployment (Docker), version control (Git).</li>
+            <li>Project Delivery & QA: Agile/Scrum; SIT, UAT, regression testing.</li>
         </ul>
 
         <h3>Soft Skills</h3>
         <ul>
-            <li>Proactively addressing organizational challenges and collaborating on effective solutions.</li>
-            <li>Collaborating effectively with teams to achieve shared goals.</li>
-            <li>Demonstrating commitment and dedication to exceed objectives.</li>
+            <li>Stakeholder communication and KPI framing for production ML delivery.</li>
+            <li>Cross-functional collaboration across engineering, product, and business teams.</li>
+            <li>Documentation, production validation, and clear communication of assumptions and risks.</li>
         </ul>
     </div>
 
@@ -176,48 +167,33 @@
         <p>Trilingual: English, Spanish (native), and French.</p>
 
         <h3>TECHNICAL SKILLS</h3>
-        <p><strong>Programming Languages:</strong> Python IDE and Jupyter, R (RStudio), C++, PL/SQL plus archaic programming languages.</p>
-        <p><strong>RDBMS:</strong> Cloud SQL (PostgreSQL), Oracle, MS SQL Analyzer. Data management tools and modelers for SQL based databases. Other Databases: Exposure to NoSQL DBs (MongoDB), Hadoop, and Apache Spark.</p>
-        <p><strong>Operating Systems:</strong> Linux (Ubuntu) and UNIX (HP-UX) including shell scripting, Windows.</p>
-        <p><strong>Development Tools:</strong> GitHub, SourceTree, Docker. Platforms: Google Cloud, including Cloud SQL, Google Functions, Pub/Sub.</p>
-        <p><strong>Data Science frameworks and libraries:</strong> Pytorch, TensorFlow, scikit-learn, numpy, pandas.</p>
-        <p><strong>Project Management:</strong> Waterfall and Agile paradigms.</p>
-        <p><strong>Data Analytics software:</strong> Tableau.</p>
+            <p><strong>Programming Languages:</strong> Python (PyTorch, TensorFlow, scikit-learn, pandas), SQL; Spark exposure.</p>
+            <p><strong>Operating Systems:</strong> Linux (Ubuntu) and Windows.</p>
+            <p><strong>Development Tools:</strong> Git, Docker. Platforms: Google Cloud delivery experience.</p>
+            <p><strong>Project Delivery & QA:</strong> Agile/Scrum; SIT, UAT, regression testing.</p>
+            <p><strong>Data Analytics software:</strong> Tableau.</p>
         
         <h3>PROFESSIONAL EXPERIENCE</h3>
-        <h4>Prompta-AI (Prompta Management Consulting)</h4>
-        <p><strong>Data Scientist (contract) (May 2020 – Dec 2020)</strong></p>
-        <ul>
-            <li>Architected end-to-end Natural Language Processing and Sentiment Analysis application.</li>
-            <li>Advised client as NLP expert.</li>
-            <li>Organized development team, including Sr. Software Engineer, Jr. Software Engineers, and directed business analysts.</li>
-            <li>Selected technology platform to develop application.</li>
-            <li>Developed backend (NLP-Engine) using Python.</li>
-            <li>Implemented GitHub to support development and implemented Latent Dirichlet Allocation NLP model.</li>
-            <li>Designed and created database in PostgreSQL to support application.</li>
-            <li>Implemented Google Cloud Platform with Linux virtual machine to support application.</li>
-            <li>Supported survey’s corpuses conformed by a large number of responses.</li>
-        </ul>
 
-        <h4>Towards Data Science (Freelancer)</h4>
-        <p><strong>Author (May 2019 - Present)</strong></p>
+        <h4>Prompta AI (Management Consulting)</h4>
+        <p><strong>Data Scientist (May 2020 – Dec 2020, Contract | May 2021 – Jul 2021, Employee)</strong></p>
         <ul>
-            <li>Written articles on DS topics for this website that reaches a large number of individuals’ audience.</li>
+            <li>Architected and deployed an end-to-end NLP and sentiment analysis platform on Google Cloud; owned ingestion, model training, validation, containerized deployment, and monitoring workflows.</li>
+            <li>Led cross-functional delivery initiatives processing millions of records; translated business objectives into measurable KPIs and production-ready ML solution designs.</li>
+            <li>Built and validated workforce attrition prediction models; documented assumptions, performed cross-validation and error analysis, and delivered executive-ready insights.</li>
         </ul>
 
         <h4>Ferreira-Wells Immigration Services (Freelancer)</h4>
         <p><strong>Data Science Consultant (Dec 2018 – Feb 2019)</strong></p>
         <ul>
-            <li>Created dashboard using Tableau software for assisting upper management in decision-making.</li>
-            <li>Analyzed data for 15,000 customers database to predict Citizen Immigration Canada success for receiving permanent residence.</li>
-            <li>Included collection, cleansing, and processing of data, applied several machine learning algorithms to perform the prediction including logistic regression, decision tree, and random forest classifiers.</li>
+            <li>Created Tableau dashboards for 15K+ immigration cases to support executive decision-making.</li>
+            <li>Built logistic regression and random forest models; performed prediction and validation workflows.</li>
         </ul>
-
+        
         <h4>SharpestMinds (Mentee)</h4>
         <p><strong>Machine Learning Mentorship Program Mentee (Aug 2018 – Nov 2018)</strong></p>
         <ul>
-            <li>Developed projects under the supervision of the Director of Data Science at PwC in Toronto.</li>
-            <li>Worked with large volumes of unstructured data (weather, text, location, etc.) that was transformed into the database for analysis. For instance, the website scraper for weather data generated over 9,000,000 tuples, while the website scraper for stores generated over 200,000 locations.</li>
+            <li>Processed 9 million+ scraped data points and implemented LDA pipelines in Python; delivered a production prototype to a PwC analytics team.</li>
         </ul>
 
         <h4>Other Professional Experience</h4>
@@ -260,7 +236,7 @@
 
         <h3>EDUCATION</h3>
         <ul>
-            <li>Doctor of Philosophy in Computer Science with a focus on AI and DL, Ryerson University, outstanding GPA. Expected graduation: 2025</li>
+            <li>Doctor of Philosophy in Computer Science with a focus on AI and Data Science, Toronto Metropolitan University. Expected graduation: July 2026</li>
             <li>Master of Science in Computer Science, Ryerson University, 97.4% GPA, Ryerson Graduate Fellowship. Graduated: 2017</li>
             <li>Bachelor of Applied Mathematics and Computer Science, University of Mexico, 92.4% GPA. Graduated: 2000</li>
             <li>"Neural Networks and Deep Learning” by deeplearning.ai on Coursera. 2018</li>
@@ -273,10 +249,10 @@
         <h1 align="center">George Lopez</h1>
         <h2 align="center">PORTFOLIO</h2>
         <h2>Projects</h2>
-        <p><strong>Prompta Alpha-1 Project.</strong></p>
+        <p><strong>Prompta Alpha1.</strong></p>
         <ul>
-            <li>Implemented IT infrastructure (SW). Organized Project team. Architected solution E2E, including database design and creation of a Natural Language/Sentiment Analysis (NLP/SA) application that implemented the LDA algorithm. Developed back-end using Python, PostgreSQL, and GCP.</li>
-            <li>Implemented Machine Learning solution for TOPSIS and Employee Attrition models using Python, PostgreSQL, and Google Cloud Platform (GCP).</li>
+            <li>Designed and deployed an end-to-end NLP platform on Google Cloud, including data ingestion, LDA modeling, and deployment; processed millions of records.</li>
+            <li>Built and validated workforce attrition prediction models; delivered executive-ready insights grounded in documented assumptions and error analysis.</li>
         </ul>
 
         <p><strong>Should you would like to see a more detailed description of the application, please request it.</strong></p>
