--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 
         <h5>SAP, SAP Implementation Consultant – Enterprise Systems (Permanent) (1998 - Aug 2000)</h5>
         <ul>
-            <li></li>Implemented and configured SAP SD and Retail modules for enterprise clients, supporting end-to-end order-to-cash and retail operations workflows.
-            <li></li>Participated in system integration, customization, and client-facing deployment initiatives across multi-site environments.
+            <li>Implemented and configured SAP SD and Retail modules for enterprise clients, supporting end-to-end order-to-cash and retail operations workflows.</li>
+            <li>Participated in system integration, customization, and client-facing deployment initiatives across multi-site environments.</li>
         </ul>
         
         <h3>EDUCATION</h3>
