--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                 padding-top: 60px; /* Adjust this value to match the height of the fixed header */
             }
         }
+        ul {
+            padding-left: 20px;
+            }
     </style>
 </head>
 <body>
