--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <li>“Practical Machine Learning” by Johns Hopkins University on Coursera. 2016</li>
           <li>Project Management Certificate, Ryerson University. 2006</li>
         </ul>
-
+  </div>
     <div class="content" id="projects">
         <h1 align="center">George Lopez</h1>
         <h2 align="center">PORTFOLIO</h2>
